<resources>
    <string name="app_name">生活家</string>

    <string name="empty" />

    <string name="button_hint_of_jump">跳过</string>
    <string name="button_hint_of_back">返回</string>
    <string name="button_hint_of_info">详情</string>


    <string name="button_hint_of_detials">明细</string>
    <string name="button_hint_of_charts">类别报表</string>
    <string name="button_hint_of_accounts">账户</string>
    <string name="button_hint_of_addnote">记一笔</string>
    <string name="button_hint_of_description">备注</string>

    <string name="hint_of_text_scan">扫一扫</string>
    <string name="hint_of_text_pay">付款</string>
    <string name="hint_of_text_card">卡券</string>
    <string name="hint_of_text_qewr">逛一逛</string>

    <string name="hint_of_text_ordrs">账单</string>
    <string name="hint_of_text_jizhang">记账本</string>
    <string name="hint_of_text_zhuanzhuang">转账</string>
    <string name="hint_of_text_xinyongkahuankuan">信用卡还款</string>
    <string name="hint_of_text_caipiao">彩票</string>
    <string name="hint_of_text_dache">打车</string>
    <string name="hint_of_text_gupiao">股票</string>
    <string name="hint_of_text_huilvhuansuan">汇率换算</string>
    <string name="hint_of_text_kuaiqiang">快抢</string>
    <string name="hint_of_text_qinmifu">亲密付</string>
    <string name="hint_of_text_shoujichongzhi">手机充值</string>
    <string name="hint_of_text_lishi">史至今日</string>
    <string name="hint_of_text_aixinjuanzeng">爱心捐赠</string>
    <string name="hint_of_text_aliyouxi">阿里游戏</string>
    <string name="hint_of_text_taodiandian">淘点点</string>
    <string name="hint_of_text_jipiao">机票</string>
    <string name="hint_of_text_kuaidi">快递</string>
    <string name="hint_of_text_lvyoutehui">旅游特惠</string>
    <string name="hint_of_text_taobao">淘宝</string>
    <string name="hint_of_text_wodebaozhang">我的保障</string>
    <string name="hint_of_text_youxichongzhi">游戏充值</string>


    <string name="hint_of_text_gengduo">更多</string>


    <string name="textview_hint_of_year">2016年</string>
    <string name="textview_hint_of_month">12月</string>
    <string name="textview_hint_of_day">31日</string>
    <string name="textview_hint_of_income">收入(元)</string>
    <string name="textview_hint_of_outdo">支出(元)</string>
    <string name="textview_hint_of_money">999999.99</string>

    <string name="no_class_notification">对不起没有对应的类</string>

    <string name="activity_navi_title_of_note">记账本</string>
    <string name="activity_navi_title_of_history_today">历史上的今天</string>
    <string name="activity_navi_title_of_choice_date">日期选择</string>


    <!--支出-->
    <string name="textview_hint_of_yiban">一般</string>
    <string name="textview_hint_of_canyin">餐饮</string>
    <string name="textview_hint_of_gouwu">购物</string>
    <string name="textview_hint_of_fushi">服饰</string>
    <string name="textview_hint_of_jiaotong">交通</string>

    <string name="textview_hint_of_yule">娱乐</string>
    <string name="textview_hint_of_shejiao">社交</string>
    <string name="textview_hint_of_jujia">居家</string>
    <string name="textview_hint_of_tongxun">通讯</string>
    <string name="textview_hint_of_lingshi">零食</string>

    <string name="textview_hint_of_meirong">美容</string>
    <string name="textview_hint_of_yundong">运动</string>
    <string name="textview_hint_of_lvxing">旅行</string>
    <string name="textview_hint_of_shuma">数码</string>
    <string name="textview_hint_of_xuexi">学习</string>

    <string name="textview_hint_of_yiliao">医疗</string>
    <string name="textview_hint_of_shuji">书籍</string>
    <string name="textview_hint_of_chongwu">宠物</string>
    <string name="textview_hint_of_caipiao">彩票</string>
    <string name="textview_hint_of_qiche">汽车</string>

    <string name="textview_hint_of_bangong">办公</string>
    <string name="textview_hint_of_zhufang">住房</string>
    <string name="textview_hint_of_weixiu">维修</string>
    <string name="textview_hint_of_haizi">孩子</string>
    <string name="textview_hint_of_zhangbei">长辈</string>

    <string name="textview_hint_of_liwu">礼物</string>
    <string name="textview_hint_of_lijin">礼金</string>
    <string name="textview_hint_of_huanqian">还钱</string>
    <string name="textview_hint_of_juanzeng">捐赠</string>
    <string name="textview_hint_of_licai">理财</string>

    <string name="textview_hint_of_tianjialeibie">添加类别</string>

    <string name="textview_hint_of_zhichu">支出</string>
    <string name="textview_hint_of_shouru">收入</string>


    <!--收入-->
    <string name="textview_hint_of_gongzi">工资</string>
    <string name="textview_hint_of_jianzhi">兼职</string>
    <string name="textview_hint_of_licaishouyi">理财收益</string>
    <string name="textview_hint_of_lijinincome">礼金</string>
    <string name="textview_hint_of_qitaincome">其他</string>

    <!--keyboard-->
    <string name="button_hint_of_key_0">0</string>
    <string name="button_hint_of_key_00">00</string>
    <string name="button_hint_of_key_1">1</string>
    <string name="button_hint_of_key_2">2</string>
    <string name="button_hint_of_key_3">3</string>
    <string name="button_hint_of_key_4">4</string>
    <string name="button_hint_of_key_5">5</string>
    <string name="button_hint_of_key_6">6</string>
    <string name="button_hint_of_key_7">7</string>
    <string name="button_hint_of_key_8">8</string>
    <string name="button_hint_of_key_9">9</string>
    <string name="button_hint_of_key_point">.</string>
    <string name="button_hint_of_key_sure">完成</string>


    <string name="title_activity_to_day_thing">ToDayThingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_to_day_thing_detial">ToDayThingDetialActivity</string>


</resources>
